recursion.cons.min.Min.scala.error
Compilation error:
Min:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    record
    ^Min:6: error: type mismatch;
 found   : Unit
 required: Int
    record=999999
          ^