recursion.cons.min.Min.scala.code
var record: Int = 999999
def min(l:List[Int]): Int = {
	if (l==Nil) {
    record
    record=999999
  }
  else if (l.head<record) {
    record=l.head
    min(l.tail)
  }
  else min(l.tail)
}